--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -1031,6 +1031,7 @@ dtb-$(CONFIG_ARCH_IMX8ULP) += \
 
 dtb-$(CONFIG_ARCH_IMX8M) += \
 	imx8mm-data-modul-edm-sbc.dtb \
+	imx8mm-b664-ppc.dtb \
 	imx8mm-ddr4-evk.dtb \
 	imx8mm-ddr4-ab2.dtb \
 	imx8mm-ddr3l-val.dtb \
