--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -964,6 +964,7 @@ dtb-$(CONFIG_ARCH_IMX8ULP) += \
 	imx8ulp-watch.dtb
 
 dtb-$(CONFIG_ARCH_IMX8M) += \
+	imx8mm-b664-ppc.dtb \
 	imx8mm-ddr4-evk.dtb \
 	imx8mm-ddr4-ab2.dtb \
 	imx8mm-ddr3l-val.dtb \
