imx8mm-b664-ppc: add dp panel control pin definition to dts
Using gpio function to initial power pin and reset pin, note that reset
pin has to set opendrain mode for matched hardware design.

--- a/arch/arm/dts/imx8mm-b664-ppc.dtsi
+++ b/arch/arm/dts/imx8mm-b664-ppc.dtsi
@@ -81,32 +81,6 @@
 			clocks = <&clk IMX8MM_CLK_SAI3_ROOT>;
 		};
 	};
-
-	dsi_host: dsi-host {
-		compatible = "samsung,sec-mipi-dsi";
-		status = "okay";
-	};
-
-	rm67199_panel {
-		compatible = "raydium,rm67199";
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_mipi_dsi_en>;
-		reset-gpio = <&gpio1 8 GPIO_ACTIVE_LOW>;
-		dsi-lanes = <4>;
-		video-mode = <2>;	/* 0: burst mode
-					 * 1: non-burst mode with sync event
-					 * 2: non-burst mode with sync pulse
-					 */
-		panel-width-mm = <68>;
-		panel-height-mm = <121>;
-		status = "okay";
-
-		port {
-			rm67191_from_dsim: endpoint {
-				remote-endpoint = <&dsim_to_rm67191>;
-			};
-		};
-	};
 };
 
 &A53_0 {
@@ -161,6 +135,26 @@
 			reset-assert-us = <10000>;
 		};
 	};
+};
+
+&gpio1 {
+        dp_en {
+                gpio-hog;
+                gpios = <8 GPIO_ACTIVE_HIGH>;
+                line-name = "dp_en";
+                output-high;
+                pinctrl-names = "default";
+                pinctrl-0 = <&pinctrl_dp_ctrl_en>;
+        };
+
+        dp_rst {
+                gpio-hog;
+                gpios = <10 GPIO_ACTIVE_HIGH>;
+                line-name = "dp_rst";
+                output-high;
+                pinctrl-names = "default";
+                pinctrl-0 = <&pinctrl_dp_ctrl_rst>;
+        };
 };
 
 &i2c1 {
@@ -291,27 +285,13 @@
 };
 
 &i2c2 {
-	clock-frequency = <400000>;
+	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
 	pinctrl-0 = <&pinctrl_i2c2>;
 	pinctrl-1 = <&pinctrl_i2c2_gpio>;
 	scl-gpios = <&gpio5 16 GPIO_ACTIVE_HIGH>;
 	sda-gpios = <&gpio5 17 GPIO_ACTIVE_HIGH>;
 	status = "okay";
-
-	adv_bridge: adv7535@3d {
-		compatible = "adi,adv7533";
-		reg = <0x3d>;
-		adi,addr-cec = <0x3c>;
-		adi,dsi-lanes = <4>;
-		status = "okay";
-
-		port {
-			adv7535_from_dsim: endpoint {
-				remote-endpoint = <&dsim_to_adv7535>;
-			};
-		};
-	};
 };
 
 &i2c3 {
@@ -387,18 +367,6 @@
 
 &mipi_dsi {
 	status = "okay";
-
-	port@1 {
-		dsim_to_adv7535: endpoint {
-			remote-endpoint = <&adv7535_from_dsim>;
-		};
-	};
-
-	port@2 {
-		dsim_to_rm67191: endpoint {
-			remote-endpoint = <&rm67191_from_dsim>;
-		};
-	};
 };
 
 &iomuxc {
@@ -578,9 +546,16 @@
 		>;
 	};
 
-	pinctrl_mipi_dsi_en: mipi_dsi_en {
+	pinctrl_dp_ctrl_en: mipi_dp_ctrl_en {
 		fsl,pins = <
-			MX8MM_IOMUXC_GPIO1_IO08_GPIO1_IO8		0x19
+			MX8MM_IOMUXC_GPIO1_IO08_GPIO1_IO8               0x19 // power
 		>;
 	};
+
+	pinctrl_dp_ctrl_rst: mipi_dp_ctrl_rst {
+		fsl,pins = <
+			MX8MM_IOMUXC_GPIO1_IO10_GPIO1_IO10              0x36 // reset
+		>;
+	};
+
 };
