--- a/configs/imx8mp_b643_ppc_android_defconfig
+++ b/configs/imx8mp_b643_ppc_android_defconfig
@@ -103,6 +103,7 @@ CONFIG_GPIO_HOG=y
 CONFIG_MXC_GPIO=y
 CONFIG_DM_PCA953X=y
 CONFIG_DM_I2C=y
+CONFIG_SYS_I2C_MXC=y
 CONFIG_LED=y
 CONFIG_LED_GPIO=y
 CONFIG_SUPPORT_EMMC_RPMB=y
