--- a/arch/arm/dts/imx8mm-b664-ppc.dtsi
+++ b/arch/arm/dts/imx8mm-b664-ppc.dtsi
@@ -155,6 +155,26 @@
                 pinctrl-names = "default";
                 pinctrl-0 = <&pinctrl_dp_ctrl_rst>;
         };
+
+        wifi_pwr {
+                gpio-hog;
+                gpios = <11 GPIO_ACTIVE_LOW>;
+                line-name = "wifi_pwr";
+                output-high;
+                pinctrl-names = "default";
+                pinctrl-0 = <&pinctrl_wifi_module_power>;
+        };
+};
+
+&gpio2 {
+	wifi_regon {
+		gpio-hog;
+		gpios = <10 GPIO_ACTIVE_HIGH>;
+		line-name = "wifi_regon";
+		output-high;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_wifi_regon>;
+	};
 };
 
 &i2c1 {
@@ -558,4 +578,15 @@
 		>;
 	};
 
+	pinctrl_wifi_module_power: mipi_wifi_module_power {
+		fsl,pins = <
+			MX8MM_IOMUXC_GPIO1_IO11_GPIO1_IO11              0x41 // reset
+		>;
+	};
+
+	pinctrl_wifi_regon: mipi_wifi_regon {
+		fsl,pins = <
+			MX8MM_IOMUXC_SD1_RESET_B_GPIO2_IO10             0x41
+		>;
+	};
 };
