imx8mm-b664-ppc: add for shortening bootup time and displaying IEI boot logo

--- a/configs/imx8mm_b664_ppc_android_defconfig
+++ b/configs/imx8mm_b664_ppc_android_defconfig
@@ -34,6 +34,7 @@ CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_FIT_GENERATOR="arch/arm/mach-imx/mkimage_fit_atf.sh"
 CONFIG_OF_SYSTEM_SETUP=y
 CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=arch/arm/mach-imx/imx8m/imximage-8mm-lpddr4.cfg"
+CONFIG_BOOTDELAY=1
 CONFIG_BOOTCOMMAND="run distro_bootcmd;run bsp_bootcmd"
 CONFIG_DEFAULT_FDT_FILE="imx8mm-b664-ppc.dtb"
 CONFIG_ARCH_MISC_INIT=y
@@ -140,16 +141,6 @@ CONFIG_USB_GADGET_VENDOR_NUM=0x1fc9
 CONFIG_USB_GADGET_PRODUCT_NUM=0x0152
 CONFIG_CI_UDC=y
 CONFIG_SDP_LOADADDR=0x40400000
-CONFIG_DM_VIDEO=y
-CONFIG_SYS_WHITE_ON_BLACK=y
-CONFIG_VIDEO_LCD_RAYDIUM_RM67191=y
-CONFIG_VIDEO_IMX_SEC_DSI=y
-CONFIG_SPLASH_SCREEN=y
-CONFIG_SPLASH_SCREEN_ALIGN=y
-CONFIG_VIDEO_ADV7535=y
-CONFIG_AVB_WARNING_LOGO=y
-CONFIG_AVB_WARNING_LOGO_COLS=0x320
-CONFIG_AVB_WARNING_LOGO_ROWS=0xc0
 CONFIG_LZO=y
 CONFIG_BZIP2=y
 CONFIG_OF_LIBFDT_OVERLAY=y
