--- a/arch/arm/dts/imx8mm-b664-ppc.dtsi
+++ b/arch/arm/dts/imx8mm-b664-ppc.dtsi
@@ -167,6 +167,15 @@
 };
 
 &gpio2 {
+	wifi_irq {
+		gpio-hog;
+		gpios = <9 GPIO_ACTIVE_HIGH>;
+		line-name = "wifi_irq";
+		input;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_wifi_irq>;
+	};
+
 	wifi_regon {
 		gpio-hog;
 		gpios = <10 GPIO_ACTIVE_HIGH>;
@@ -575,4 +584,11 @@
 			MX8MM_IOMUXC_SD1_RESET_B_GPIO2_IO10             0x41
 		>;
 	};
+
+	pinctrl_wifi_irq: mipi_wifi_irq {
+		fsl,pins = <
+			MX8MM_IOMUXC_SD1_DATA7_GPIO2_IO9                0x41
+		>;
+	};
+
 };
