configs: imx8mm_b664_ppc_defconfig: fix ums cannot find usb host issue
Remove driver model first for legacy mode, then remove tcpc function.

--- a/configs/imx8mm_b664_ppc_defconfig
+++ b/configs/imx8mm_b664_ppc_defconfig
@@ -17,7 +17,6 @@ CONFIG_SYS_I2C_MXC_I2C3=y
 CONFIG_DM_GPIO=y
 CONFIG_DEFAULT_DEVICE_TREE="imx8mm-b664-ppc"
 CONFIG_SPL_TEXT_BASE=0x7E1000
-CONFIG_USB_TCPC=y
 CONFIG_TARGET_IMX8MM_B664_PPC=y
 CONFIG_SPL_MMC=y
 CONFIG_SPL_SERIAL=y
@@ -130,6 +129,7 @@ CONFIG_OPTEE=y
 CONFIG_DM_THERMAL=y
 CONFIG_IMX_TMU=y
 CONFIG_USB=y
+# CONFIG_DM_USB_GADGET is not set
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_HOST_ETHER=y
 CONFIG_USB_ETHER_ASIX=y
